# docstringify

./: .gitignore  GEMINI.md  README.md  cli.py  config.py  dataset.ipynb  eval.ipynb  evaluate.py  experiments.ipynb  pyproject.toml  test_dataset.json
doc_generator/: rag_pipeline.py
docstringify/: agent.py  app.py  code_parser.py  config.py  db.py  injector.py  main.py  nodes.py  retrievers.py  utils.py  workflow.py
src/: CodeStructureVisitor.py  agent.py  code_parser.py  code_splitter.py  db.py  ingest.py  injector.py  loader.py  main.py  pipeline.py  retrievers.py
tests/: agent_test.py  code_parser_test.py  code_splitter_test.py  conftest.py  db_test.py  ingest_test.py  injector_test.py  loader_test.py  retrievers_test.py
tests/sample/: utils.py  weights.py
