[project]
name = "doc-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nguyen Phuc Nguyen", email = "nguyen.pn@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "chromadb>=1.2.2",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "mlflow>=3.5.1",
    "peft>=0.17.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
]

[project.scripts]
doc-generator = "doc_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
