[project]
name = "docstringify"
version = "0.1.0"
description = "Docstringify"
readme = "README.md"
authors = [
    { name = "Nguyen Phuc Nguyen", email = "nguyen.pn@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "langchain>=1.0.0",
    "langchain-ollama",
    "weave>=0.52.0",
    "peft>=0.17.1",
    "transformers>=4.57.1",
    "astor>=0.8.1",
    "typer>=0.20.0",
    "torch>=2.7.0",
    "huggingface-hub",
    "rank_bm25",
    "bitsandbytes",
    "pydantic",
    "sentence-transformers>=5.1.2",
    "langchain-community>=0.4.1",
    "wandb>=0.23.1",
    "ragas>=0.4.2",
    "peewee>=3.19.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "datasets>=4.4.1",
    "ipywidgets>=8.1.8",
    "jupyter-lsp>=2.3.0",
    "jupyter-ruff>=0.3.0",
    "jupyterlab>=4.5.0",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pandas-stubs~=2.3.3",
    "ragas>=0.4.1",
    "google-auth>=2.45.0",
    "google-genai>=1.56.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
